swscale/utils: fix wrong deprecated message with rgb0

Fixes Ticket3242
Signed-off-by: Michael Niedermayer <michaelni@gmx.at>